android aar 추가, 브릿지 모듈 최초 커밋

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,7 +173,7 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/NewWorld.NewWorld
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -182,7 +182,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/NewWorld.NewWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -203,4 +203,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bPackageDataInsideApk=True
 
