--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -184,7 +184,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/NewWorld.NewWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
