언리얼 안드로이드 브릿지 구현

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -207,3 +207,7 @@ ManualIPAddress=
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/MiniPubSubUnreal.SampleBluprintLibrary.SendNative",NewName="/Script/MiniPubSubUnreal.SampleBluprintLibrary.SendNativeTest")
++StructRedirects=(OldName="/Script/MiniPubSubUnreal.NativeData",NewName="/Script/MiniPubSubUnreal.ToastData")
