Message encode & decode 방식 변경
- Message를 info와 data 영역으로 나누어서 관리
- 각각 encode decode 수행하도록 변경
- iOS 브릿지 우선 적용

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -211,3 +211,16 @@ bPackageDataInsideApk=True
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/MiniPubSubUnreal.SampleBluprintLibrary.SendNative",NewName="/Script/MiniPubSubUnreal.SampleBluprintLibrary.SendNativeTest")
 +StructRedirects=(OldName="/Script/MiniPubSubUnreal.NativeData",NewName="/Script/MiniPubSubUnreal.ToastData")
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+CodeSigningPrefix=com.PJ.UnrealSample
+bUseModernXcode=True
+CodeSigningTeam=P37JRK8N7P
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+MobileProvision=e16c44a5-dc53-4bbf-a2be-31e51fee99ed.mobileprovision
+SigningCertificate=Apple Development: Sangmin Park (GU89468R9J)
+BundleIdentifier=com.PJ.UnrealSample
+bAutomaticSigning=True
+IOSTeamID=P37JRK8N7P
+
