--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -163,6 +163,7 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationColor.PPM_DefaultCalibrationColor
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
+r.DefaultFeature.AntiAliasing=1
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -173,7 +174,7 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewWorld.NewWorld
+EditorStartupMap=/Game/PubSubDemoMap.PubSubDemoMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -182,7 +183,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/NewWorld.NewWorld
+GameDefaultMap=/Game/PubSubDemoMap.PubSubDemoMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/MyGameMode.MyGameMode_C
 GlobalDefaultServerGameMode=None
@@ -207,6 +208,9 @@ ManualIPAddress=
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
 TargetSDKVersion=34
+bBuildForArmV7=False
+bBuildForArm64=True
+SDKAPILevelOverride=android-34
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/MiniPubSubUnreal.SampleBluprintLibrary.SendNative",NewName="/Script/MiniPubSubUnreal.SampleBluprintLibrary.SendNativeTest")
@@ -223,4 +227,3 @@ SigningCertificate=Apple Development: Sangmin Park (GU89468R9J)
 BundleIdentifier=com.PJ.UnrealSample
 bAutomaticSigning=True
 IOSTeamID=P37JRK8N7P
-
